Replace project with new version